# cicd_test

./: diff1.txt  test.txt
build_python/: Makefile  README.md  app.py  pip.conf  publish.sh  pyproject.toml  requirements.txt
build_python/tests/: test_app.py
