[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
description = "My Python application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]